Fix for logo disappearing on mobile.

--- a/static/sass/app.sass
+++ b/static/sass/app.sass
@@ -697,7 +697,6 @@ footer .footer-inner
       & > a
         width: 100%
         padding: 0px 5px 0px
-        color: #222222
       p
         display: none
       i
